add necessary configurations for performing a release